Fixed color changes of counter div.

--- a/index.html
+++ b/index.html
@@ -163,11 +163,17 @@
    .list .check input:checked ~ .data:hover {
     background-color: #8AC34A;
    }
+   .list .check input:checked ~ .data .counter {
+    background-color: transparent;
+   }
    .list .delete input:checked ~ .data {
     background-color: #AD3C3C;
    }
    .list .delete input:checked ~ .data:hover {
     background-color: #CD5C5C;
+   }
+   .list .delete input:checked ~ .data .counter {
+    background-color: transparent;
    }
    .list .check input:checked ~ .data .ctrl .img {
     background-position: -64px 0px;
