--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  <head>
   <title>Don't Forget!</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style type="text/css">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <style>
    * {
     background-color: transparent;
    }
@@ -207,7 +207,7 @@
      <textarea class="full-height full-width interactive" id="new" name="new" placeholder="Add item to list."></textarea>
     </div>
     <label class="ctrl contained button">
-     <input class="submit" type="button" onclick="add_item(this, storage)">
+     <input class="submit" type="button" value="submit" onclick="add_item(this, storage)">
      <span class="img blocky"></span>
     </label>
    </div>
