Add meta encoding.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  <head>
   <title>Don't Forget!</title>
+  <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
    * {
